{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player1",
            "id": "69d130ce-0f12-4b3d-bada-75bd6a7c6947",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "33d122d9-5bb5-46c1-a3f6-b3fd09629968",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "933fc2fb-4ceb-48bd-8738-89f1c651ad8f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickItem",
                    "type": "Button",
                    "id": "80a6b49d-ecdf-4e7d-b843-6b64314161b8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "d56b0b5f-53e5-44f2-af21-6825324c983e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "00826e57-d82a-40fb-b4ab-c709bdc2d2d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c9b8152c-4e44-421a-b2fc-2f6ea3c75bcd",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "677d0d9a-6efc-4f13-a9b9-6b9665193b3b",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf307fe3-1b61-48fb-a82d-731e2e2a1c11",
                    "path": "<XInputController>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "355d33a1-70ac-446d-ae64-5aace8944fe8",
                    "path": "<XInputController>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "587c356a-ac40-4a1a-a2fa-ebc952112741",
                    "path": "<XInputController>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}